--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^3.3.1",
     "flow": "^0.2.3",
-    "react-native": "^0.10.0",
-    "react-native-cookies": "0.0.3"
+    "react-native": "^0.10.0"
   }
 }
