--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,25 @@
 {
   "stage": 0,
-  "whitelist": ["es6.modules", "es7.functionBind"]
+  "retainLines": true,
+  "compact": true,
+  "comments": false,
+  "whitelist": [
+    "es6.arrowFunctions",
+    "es6.blockScoping",
+    "es6.constants",
+    "es6.classes",
+    "es6.destructuring",
+    "es6.parameters",
+    "es6.properties.computed",
+    "es6.properties.shorthand",
+    "es6.spread",
+    "es6.templateLiterals",
+    "es7.asyncFunctions",
+    "es7.trailingFunctionCommas",
+    "es7.objectRestSpread",
+    "flow",
+    "react",
+    "regenerator"
+  ],
+  "sourceMaps": false
 }
