--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.1",
-    "eslint": "^1.3.1",
-    "eslint-plugin-react": "^3.3.1",
-    "flow": "^0.2.3",
-    "react-native": "^0.11.0",
+    "react-native": "^0.11.4",
     "react-native-cookies": "0.0.3"
+  },
+  "devDependencies": {
+    "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.1",
+    "eslint": "^1.5.0",
+    "eslint-plugin-react": "^3.3.1"
   }
 }
