Basic Jest test setup

--- a/.eslintrc
+++ b/.eslintrc
@@ -50,9 +50,11 @@
   },
   "env": {
     "node": true,
-    "es6": true
+    "es6": true,
+    "jasmine": true
   },
   "globals": {
-    "fetch"
+    "fetch": false,
+    "jest": false
   }
 }
