--- a/package.json
+++ b/package.json
@@ -3,7 +3,23 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node_modules/react-native/packager/packager.sh"
+    "start": "node_modules/react-native/packager/packager.sh",
+    "test": "jest"
+  },
+  "jest": {
+    "scriptPreprocessor": "node_modules/react-native/jestSupport/scriptPreprocess.js",
+    "setupEnvScriptFile": "node_modules/react-native/jestSupport/env.js",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "packager/react-packager/src/Activity/"
+    ],
+    "testFileExtensions": [
+      "js"
+    ],
+    "unmockedModulePathPatterns": [
+      "promise",
+      "source-map"
+    ]
   },
   "dependencies": {
     "react-native": "^0.11.4",
@@ -13,6 +29,7 @@
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.1",
     "eslint": "^1.5.0",
-    "eslint-plugin-react": "^3.3.1"
+    "eslint-plugin-react": "^3.3.1",
+    "jest-cli": "^0.5.10"
   }
 }
