--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-eslint": "^4.1.1",
     "eslint": "^1.5.0",
     "eslint-plugin-react": "^3.3.1",
-    "jest-cli": "^0.5.10"
+    "jest-cli": "^0.5.10",
+    "flow-bin": "^0.14.0"
   }
 }
